--- a/_assets/css/custom/navigation.scss
+++ b/_assets/css/custom/navigation.scss
@@ -85,7 +85,7 @@ $tooltip-background: rgba(60, 60, 60, 0.9);
   transform: scale(0) translateY(-50%);
   transform-origin: top right;
   transition: all 200ms ease;
-  width: max-content;
+  white-space: nowrap;
 
   &::after {
     border: solid transparent;
