--- a/_assets/css/base.scss
+++ b/_assets/css/base.scss
@@ -139,7 +139,7 @@ hr {
   }
   @include media-query($on-palm) {
     max-width: 100vw;
-    padding: 0.5em 1em;
+    padding: 0.5rem 1rem;
   }
 }
 
