--- a/_assets/css/custom/gallery.scss
+++ b/_assets/css/custom/gallery.scss
@@ -7,7 +7,7 @@
     max-width: 260px;
     object-fit: cover;
     transform: scale(1, 1);
-    transition: all 200ms;
+    transition: transform 200ms;
   }
 
   img:hover {
@@ -40,14 +40,14 @@
 
 .lightbox {
   background-color: rgba(255, 255, 255, 0.9);
-  height: 100%;
+  height: 100vh;
   left: 0;
   opacity: 0;
   pointer-events: none;
-  position: absolute;
+  position: fixed;
   top: 0;
-  transition: all 500ms ease-in;
-  width: 100%;
+  transition: opacity 500ms ease-in;
+  width: 100vw;
   z-index: 7;
 
   &.enabled {
@@ -61,7 +61,7 @@
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
-  transition: all 1s ease;
+  transition: transform 1s ease;
 }
 
 .photo {
