--- a/_assets/css/custom/mobile.scss
+++ b/_assets/css/custom/mobile.scss
@@ -1,3 +1,8 @@
+.toc-mobile-wrapper li {
+    padding: 0.75rem 0;
+    border-bottom: solid 1px $grey-color-dark;
+}
+
 @media (max-width: 450px){
 
     section {
@@ -18,16 +23,9 @@
     #explore-cigi-link, #view-ar-link {
         display: none;
     }
-    .site-header.wrapper{
+    .site-header {
         background: $background-color;
-        z-index: 201;
-        color: black !important;
-        .mt3 {
-            margin-top: 0;
-        }
-        .mv4-ns {
-            display: none;
-        }
+        box-shadow: 0 0 1rem 1px $grey-25;
         .cigi-logo-mobile {
             width: 50px;
         }
@@ -44,12 +42,13 @@
         }
     }
     .toc-mobile-wrapper {
+        left: 0;
+        top: 0;
         height: 100vh;
         width: 100vw;
         background: black;
         color: white;
         position: fixed;
-        z-index: 200;
         overflow: auto;
         a {
             color: white;
@@ -59,23 +58,20 @@
             padding: 4em 1em 0 1em;
             font-size: 1em;
             list-style: none;
-                li {
-                    padding: 0.75em 0;
-                    border-bottom: solid 1px $grey-color-dark;
-                }
-        }      
+
+        }
     }
-   
+
     .header-inverse.site-header.wrapper{
         background: black;
         i {
             color: white;
         }
     }
-    #timeline-slide-content, .flex-ns.absolute.items-end.bottom-0.left-0.right-0.wrapper.w-100.pb4-l{
+    #timeline-slide-content, #timeline-filters {
         display: none;
     }
-    .vh-100.default-background.relative.overflow-hidden {
+    .timeline-slide {
         padding-top: 5em;
     }
     .fa.hidden {
@@ -85,7 +81,11 @@
         font-size: 2em !important;
         line-height: 1.25em !important;
     }
-    .standard-slide.remove-bg-image {
+    .financials,
+    .standard-slide{
+        padding-top: 3rem;
+    }
+    .remove-bg-image {
         background-image: none;
         background: $background-color;
         opacity: 1;
@@ -102,6 +102,7 @@
         padding: 2px 10px 5px 10px;
         border-radius: 50%;
         font-size: 2em;
+        box-shadow: 0 0 0.5rem $grey-25;
     }
     .visibility-none{
         visibility: hidden;
@@ -121,7 +122,7 @@
     .cigi-logo-mobile, .toc-close-mobile, .toc-open-mobile{
         display: none !important;
     }
-    .slide-3, .slide-9, .slide-10, .slide-11, .slide-12, .slide-13 {
+    .slide-3, .slide-10, .slide-11, .slide-12, .slide-13 {
         background-image: none;
     }
 }
