--- a/_assets/css/custom/navigation.scss
+++ b/_assets/css/custom/navigation.scss
@@ -115,7 +115,7 @@ $tooltip-background: rgba(60, 60, 60, 0.9);
   align-items: center;
   background: #fff;
   border-radius: 100%;
-  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 0.5rem $grey-25;
   color: $accent-color;
   cursor: pointer;
   display: flex;
