--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,9 @@
 <header id="site-header" class="site-header wrapper w-100 z-8 flex justify-between items-center" role="banner">
-  <a href="{{ "https://www.cigionline.org" }}" class="mv4-ns"><img id="cigi-logo" src="{{ "/assets/cigi-logo.svg" | relative_url }}" alt="CIGI Logo" class="w-5rem-10vh dn db-ns"></a>
-  <a href="{{ "https://www.cigionline.org" }}" class="mobile-header-logo hidden">
+  <a href="{{ "https://www.cigionline.org" }}" class="mv4-ns dn db-ns"><img id="cigi-logo" src="{{ "/assets/cigi-logo.svg" | relative_url }}" alt="CIGI Logo" class="w-5rem-10vh dn db-ns"></a>
+  <a href="{{ "https://www.cigionline.org" }}" class="mobile-header-logo">
     <img class="cigi-logo-mobile" src="{{ "/assets/CIGI-logo-acronym-RGB-transparent.png" | relative_url }}" alt="CIGI Logo">
-    <img class="cigi-logo-mobile inverse hidden" src="{{ "/assets/CIGI-logo-acronym-reverse-RGB.jpg" | relative_url }}" alt="CIGI Logo">
   </a>
-  <div class="flex mt3 mt0-ns">
+  <div class="flex">
       <div id="main-tabs" class="tabs mr3">
           <div id="explore-cigi-link" class="tab">Explore CIGI</div>
           <div id="view-ar-link" class="tab">Annual Report</div>
