--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -1,4 +1,4 @@
-<section class="vh-100 default-background relative overflow-hidden">
+<section class="vh-100 default-background relative overflow-hidden timeline-slide">
   <div class="h-100 flex flex-column relative" id="timeline-slide-content">
     <main class="wrapper w-100 mt6-ns mt4 flex justify-between" aria-label="CIGI">
       {% markdown template_content/timeline.md %}
@@ -32,8 +32,8 @@
         </div>
       </div>
     </main>
-    <noscript>
-      <h2 class="wrapper mt6">JavaScript Not Enabled</h2>
+    <noscript class="wrapper">
+      <h2 class="mt6">JavaScript Not Enabled</h2>
       <p>
         For the best experience in viewing the Annual Report, you must have JavaScript enabled.
         <br>
@@ -46,7 +46,7 @@
     </div>
   </div>
 
-  <div class="mobile-timeline-message hidden">
+  <div class="mobile-timeline-message dn-ns">
     <h1>Sorry.</h1>
     <p><em>Explore CIGI</em> cannot be displayed on your mobile device. For the best experience, please view on a desktop browser.</p>
   </div>
