--- a/_includes/slide14.html
+++ b/_includes/slide14.html
@@ -2,12 +2,15 @@
     <div class="background-img" style="background-image: url('assets/slides/IMF.jpg')"></div>
   <div class="wrapper h-100 flex items-end">
     <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
+
         <h3>Expertise</h3>
         <h1>IMF Meetings: Focal Point for the Global Economy</h1>
+
         <div class="mobile-img"><img src="assets/slides/IMF.jpg" alt="attendants at IMF meeting"></div>
-        <p>The meetings of the International Monetary Fund (IMF) and the World Bank Group bring together an impressive group of leaders, executives and academics to discuss subjects of global concern with specific attention to the outlook of the economy, global financial stability and economic development. CIGI experts play a significant role in those discussions.</p>
+
+        <p>The meetings of the International Monetary Fund (IMF) and the World Bank Group bring together an impressive group of leaders, executives and academics to discuss subjects of global concern with specific attention to the outlook of the economy, global financial stability and economic development. CIGI plays a significant role in those discussions.</p>
         <p>At the 2016 annual meetings, CIGI and the Euro50 Group presented a timely panel on the euro zone after Brexit. At the spring meetings, CIGI and the Atlantic Council hosted a panel on Ukraine’s controversial banking reform tactics, which featured an introduction to the issue from Valeria Gontareva, governor of the National Bank of Ukraine. Senior Fellow Susan Schadler, who has more than three decades of experience at the IMF, participated as a panellist.</p>
-        <p>CIGI policy briefs, papers, videos and social media complemented the presence of fellows attending the spring meetings, resulting in some 250 articles in major media outlets including the <em>Financial Times</em>, <em>The New York Times</em> and <em>The Wall Street Journal</em>.</p>
+        <p>CIGI policy briefs, papers, videos and social media complemented the presence of fellows attending the meeting, resulting in some 250 articles in major media outlets including the <em>Financial Times</em>, <em>The New York Times</em> and <em>The Wall Street Journal</em>.</p>
       
       <div class="lightbox-link">
           <div class="youtube-lightbox pointer" data-videoid="ZGGdBEwtCaM"><i class="fa fa-play" aria-hidden="true"></i>Watch historian and Senior Fellow Harold James explain how crisis has shaped the IMF.</div>
