--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -169,6 +169,7 @@ header .tabs {
   align-self: flex-start;
   border-radius: 9999px;
   color: $grey-color-dark;
+  display: inline-block;
   margin-left: -0.3em;
   margin-top: 1em;
   order: 1;
