--- a/_includes/slide2.html
+++ b/_includes/slide2.html
@@ -2,7 +2,7 @@
     <div class="background-img" style="background-image: url('assets/slides/RM-headshot-smaller.jpg')"></div>
     <div class="wrapper h-100 flex">
         <div class="slide-content pb4-ns pb6-ns pr6-ns z-1">
-            <div class="tabs mb3" data-slide="slide-2">
+            <div class="tabs mb3" data-slide="slide-2" id="messages-tabs">
                 <div class="tab toggle" data-id="tab-1">President's Message</div>
                 <div class="tab toggle" data-id="tab-2">Chair's Message</div>
             </div>
@@ -10,7 +10,9 @@
                 <div class="tab" data-id="tab-1">
                     <h3>Messages</h3>
                     <h1>President's Message</h1>
+                    
                     <div class="col">
+                        
                         <p>Beginning in Bretton Woods in 1944, groups of powerful nations organized the economic and political arrangements that serve us, albeit imperfectly, to this day. But rapid developments in technologies are upending established structures in every part of the economy and society.</p>
                         
                         <p>Moreover, conversations defined by rising nationalism and populism on social media are daily challenging the institutions we follow closely. A stream of “fake news” contributes to rapidly growing distrust in established institutions while, in parallel, so-called legacy media is declining, particularly in North America and Europe.</p>
@@ -31,11 +33,14 @@
                             <em>President, CIGI</em></p>
                             
                         </div>
+                        <div class="photo-caption">Photo of Rohinton P. Medhora</div>
                     </div>
                     <div class="tab" data-id="tab-2" data-name="chairs-message">
                         <h3>Messages</h3>
                         <h1>Chair's Message</h1>
+                        
                         <div class="col">
+                            
                             <p> Our globalized economy has seen, in a very short amount of time, a fundamental shift away from the delivery of goods and services to international commerce based on ideas. Changing intellectual property (IP) regimes, new trade agreements and rapidly evolving technologies demand up-to-date responses from researchers and thought leaders.</p>
                             
                             <p>CIGI has responded with a new organizational approach to these issues. A redesigned website serves as a digital platform to combine research and expertise to deliver journalistic analysis. It is an approach that builds on CIGI’s already solid research programs to deliver trustworthy and timely content that stands out amidst a noisy field of information providers with little quality control.</p>
@@ -52,8 +57,9 @@
                             
                             <p class="signature"><strong>Jim Balsillie</strong><br>
                                 <em>Chair, CIGI Board of Directors</em></p>
-                                
+                            
                             </div>
+                            <div class="photo-caption">Photo of Jim Balsillie</div>
                         </div>
                     </div>
                 </div>
