--- a/_includes/slide17.html
+++ b/_includes/slide17.html
@@ -12,10 +12,13 @@
       
       <p>But none of this would be possible without CIGI’s valued network of partners. We thank the Governments of Canada and Ontario, the City of Waterloo, Jim Balsillie, and our many partners in the local and global communities for their ongoing support of our work.</p>
       
-      <p>This new, interactive annual report is part of CIGI’s digital-first approach to addressing the world’s most pressing international governance questions. Follow CIGIonline.org over the coming year as we offer research, opinion and expertise on, to name a few, Indigenous issues, developing a data strategy for Canada and the Group of Seven summit, which Canada will host in Charlevoix, Quebec.</p>
+      <p>This new, interactive annual report is part of CIGI’s digital-first approach to addressing the world’s most pressing international governance questions. Follow cigionline.org over the coming year as we offer research, opinion and expertise on, to name a few, Indigenous issues, developing a data strategy for Canada and the Group of Seven summit, which Canada will host in Charlevoix, Quebec.</p>
       
       <div class="view-article pb2 pt2">
         <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/about/annual-report?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Download Annual Report PDF.</a>
+      </div>
+      <div class="view-article pb2 pt2">
+          <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/about"><i class="fa fa-file-text-o" aria-hidden="true"></i>Learn more about CIGI and its partners.</a>
       </div>
       
     </div>
