--- a/_assets/css/custom/gallery.scss
+++ b/_assets/css/custom/gallery.scss
@@ -1,27 +1,13 @@
-// $gallery-columns: 5;
-// $gallery-rows: 4;
-// $gallery-grid-gap: 0.375rem;
-// $gallery-height: 50vh;
-// $gallery-image-aspect-ratio: 3/2;
-
 .gallery {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
   align-items: center;
-  //height: 70vh;
+  height: 70vh;
   @include media-query($small-phone) {
     height: auto;
   }
-  // display: grid;
-  // grid-gap: $gallery-grid-gap;
-  // grid-template-columns: repeat($gallery-columns, 1fr);
-  // grid-template-rows: repeat($gallery-rows, 1fr);
-  // height: $gallery-height;
-  // max-width: 100%;
-  // user-select: none;
-  // width: calc((#{$gallery-height} - #{$gallery-rows - 1} * #{$gallery-grid-gap}) * #{$gallery-columns} / #{$gallery-rows} * #{$gallery-image-aspect-ratio} + #{$gallery-columns - 1} * #{$gallery-grid-gap});
-
+  
   .image-container {
     flex-basis: 20%;
     padding: 0.1rem;
