--- a/_assets/css/custom/gallery.scss
+++ b/_assets/css/custom/gallery.scss
@@ -3,16 +3,13 @@
   flex-flow: row wrap;
   justify-content: space-between;
   align-items: center;
-  height: 70vh;
-  @include media-query($small-phone) {
-    height: auto;
-  }
-  
+   
   .image-container {
     flex-basis: 20%;
     padding: 0.1rem;
-    height: 212px;
-    height: 133px;
+    width: 210px;
+    height: 140px;
+  
     @include media-query($small-phone) {
       flex-basis: 33%;
     }
