--- a/_assets/css/custom/gallery.scss
+++ b/_assets/css/custom/gallery.scss
@@ -5,33 +5,35 @@
   align-items: center;
    
   .image-container {
+    cursor: pointer;
     flex-basis: 20%;
     padding: 0.1rem;
     width: 210px;
     height: 140px;
-  
+    overflow: hidden;
+   
     @include media-query($small-phone) {
       flex-basis: 33%;
+    }
+    
+    .view{
+      display: none;
     }
   }
 
   .image-wrapper {
+    width: 100%;
     height: 100%;
-    overflow: hidden;
-  }
 
-  img {
-    cursor: pointer;
-    height: 100%;
-    object-fit: cover;
-    object-position: center center;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
     transform: scale(1, 1);
     transition: transform 200ms;
-    width: 100%;
-  }
-
-  img:hover {
-    transform: scale(1.1, 1.1);
+    &:hover{
+      transform: scale(1.1, 1.1);
+    }
+    
   }
 
   .caption {
