--- a/_assets/css/custom/gallery.scss
+++ b/_assets/css/custom/gallery.scss
@@ -1,8 +1,11 @@
+.gallery-slide .overlay{
+  max-width: 67rem;
+}
+
 .gallery {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
-  align-items: center;
    
   .image-container {
     cursor: pointer;
@@ -27,7 +30,6 @@
   .image-wrapper {
     width: 100%;
     height: 100%;
-
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -36,16 +38,16 @@
     &:hover{
       transform: scale(1.1, 1.1);
     }
-    
   }
 
   .caption {
     display: none;
   }
+
 }
 
 .lightbox {
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(255, 255, 255, 0.85);
   height: 100vh;
   left: 0;
   opacity: 0;
@@ -54,7 +56,7 @@
   top: 0;
   transition: opacity 500ms ease-in;
   width: 100vw;
-  z-index: 7;
+  z-index: 10;
 
   &.enabled {
     opacity: 1;
@@ -74,7 +76,6 @@
 .photo {
   max-height: 75vh;
   max-width: 75vw;
-  object-fit: contain;
 }
 
 .close-button {
@@ -128,10 +129,10 @@
   }
 }
 
-.loading {
-  background: rgba(0, 0, 0, 0.5);
-  z-index: 1;
-}
+// .loading {
+//   background: rgba(0, 0, 0, 0.5);
+//   z-index: 1;
+// }
 
 .spinner {
   animation: rotate 1s linear infinite;
