--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -352,7 +352,10 @@ header.white {
 .landing {
   .landing-content {
     display: table;
-    font-size: 16px;
+    font-size: 18px;
+    @include media-query($on-laptop) {
+      font-size: 16px;
+    }
   }
   
   .wrapper {
