--- a/_includes/slide17.html
+++ b/_includes/slide17.html
@@ -10,7 +10,7 @@
       
       <p>The success stories in this annual report, and the many others not highlighted here, are the direct result of the timely, relevant and innovative work of CIGI’s staff and fellows. Their work is a testament to CIGI’s mission to build bridges from knowledge to power.</p>
       
-      <p>But none of this would be possible without CIGI’s valued network of partners. We thank the Governments of Canada and Ontario, the City of Waterloo, Jim Balsillie, and our many partners in the local and global communities for their ongoing support of our work.</p>
+      <p>But none of this would be possible without CIGI’s valued network of partners. We thank the Governments of Canada and Ontario, the City of Waterloo, founder Jim Balsillie, and our many partners in the local and global communities for their ongoing support of our work.</p>
       
       <p>This new, interactive annual report is part of CIGI’s digital-first approach to addressing the world’s most pressing international governance questions. Follow cigionline.org over the coming year as we offer research, opinion and expertise on, to name a few, Indigenous issues, developing a data strategy for Canada and the Group of Seven summit, which Canada will host in Charlevoix, Quebec.</p>
       
