--- a/_includes/slide2.html
+++ b/_includes/slide2.html
@@ -9,7 +9,7 @@
             <div class="tab-content">
                 <div class="tab" data-id="tab-1">
                     <h3>Messages</h3>
-                    <h1>President's Message</h1>
+                    <h1>President’s Message</h1>
                     
                     <div class="col">
                         
@@ -37,7 +37,7 @@
                     </div>
                     <div class="tab" data-id="tab-2" data-name="chairs-message">
                         <h3>Messages</h3>
-                        <h1>Chair's Message</h1>
+                        <h1>Chair’s Message</h1>
                         
                         <div class="col">
                             
@@ -45,7 +45,7 @@
                             
                             <p>CIGI has responded with a new organizational approach to these issues. A redesigned website serves as a digital platform to combine research and expertise to deliver journalistic analysis. It is an approach that builds on CIGI’s already solid research programs to deliver trustworthy and timely content that stands out amidst a noisy field of information providers with little quality control.</p>
                             
-                            <p>Already, CIGI has delivered a wealth of original research accompanied by timely and in-depth analysis, multimedia interviews and explanatory pieces. From the North American Free Trade Agreement (NAFTA) to innovation, this digital- first content demonstrates CIGI’s commitment to meeting the needs of today’s decision makers while reaching new audiences.</p>
+                            <p>Already, CIGI has delivered a wealth of original research accompanied by timely and in-depth analysis, multimedia interviews and explanatory pieces. From the North American Free Trade Agreement (NAFTA) to innovation, this digital-first content demonstrates CIGI’s commitment to meeting the needs of today’s decision makers while reaching new audiences.</p>
                             
                             <p> In the policy arena, CIGI responded quickly to the announcement of NAFTA renegotiations, publishing a series of original pieces and interviews on NAFTA and the knowledge economy. CIGI experts simultaneously participated in discussions with Canadian government officials looking for a road map on trade, innovation and IP under a NAFTA 2.0.</p>
                             
