--- a/_assets/css/custom/gallery.scss
+++ b/_assets/css/custom/gallery.scss
@@ -8,9 +8,10 @@
   justify-content: space-between;
    
   .image-container {
+    position: relative;
     cursor: pointer;
-    flex-basis: 20%;
-    padding: 0.1rem;
+    flex-basis: 19.7%;
+    margin: 0.1rem;
     width: 210px;
     height: 140px;
     overflow: hidden;
@@ -21,31 +22,41 @@
     @include media-query($small-phone) {
       flex-basis: 33%;
     }
-
     @media(max-height: $on-laptop) {
       height: 100px;
+    }
+
+    .caption {
+      display: none;
+      position: absolute;
+      bottom: 0;
+      background: rgba(255,255,255,0.8);
+      font-size: 0.85rem;
+      padding: 0.3rem;
+      line-height: 1rem;
+    }
+    .image-wrapper {
+      width: 100%;
+      height: 100%;
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+      transform: scale(1, 1);
+      transition: transform 200ms;
     }
 
     .view{
       display: none;
     }
-  }
 
-  .image-wrapper {
-    width: 100%;
-    height: 100%;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    transform: scale(1, 1);
-    transition: transform 200ms;
     &:hover{
-      transform: scale(1.1, 1.1);
+      .caption{
+        display: block;
+      }
+      .image-wrapper{
+        transform: scale(1.1, 1.1);
+      }
     }
-  }
-
-  .caption {
-    display: none;
   }
 
 }
